@@ -20,75 +20,64 @@
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<h2 style="margin-top:0">Chalara fraxinea<br>
+		<h2 style="margin-top:0">Chalara fraxinea symptoms<br>
 		<span style="font-size:50%">(Ash Dieback)</span></h2>
-		<p>Chalara dieback of ash is a serious disease of ash trees caused by a fungus 
-		called Chalara fraxinea. The disease causes leaf loss and crown dieback in 
-		affected trees, and it can kill trees. You'll find information below on how 
-		to spot signs of the disease.</p>
-		<p>At the base of dead side shoots, lesions (or wounds) can often be 
-		found on the branches or stem below.<br />
+		<p>Dead or dying tops of trees, most easily seen throughout summer.<br />
 			<div>
-				<img src="images/chalara_2.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		  
-		<p>Developing lesions associated with leaf scars.<br />
-			<div>
-				<img src="images/chalara_11.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>Developing lesion centred on a dead side shoot.<br />
-			<div>
-				<img src="images/chalara_13.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>The wood and pith underlying bark lesions is usually strongly stained.<br />
-			<div>
-				<img src="images/chalara_16.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>Lesions which girdle or circle the branch or stem can cause wilting of the 
-		foliage above.<br />
-			<div>
+				<!-- 5 -->
 				<img src="images/chalara_1.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>Mature trees initially display dieback of the shoots and twigs around their 
-		crowns. Dense clumps of foliage may be seen further back on branches where 
-		recovery shoots are produced.<br />
-			<div>
+				<br />
+				<!-- 6 -->
 				<img src="images/chalara_5.jpg" style="max-width:100%" alt="" border="0" />
 			</div>		
 		</p>
-		<p>Diseased saplings typically have dead tops and/or side shoots.<br />
+		  
+		<p>Wilting leaves, most visible in spring and early summer.<br />
 			<div>
+				<!-- 7 -->
 				<img src="images/chalara_3.jpg" style="max-width:100%" alt="" border="0" />
 			</div>		
 		</p>
-		<p>Dead or dying stem (arrowed) and drying up of leaflets.<br />
+		
+		<p>Lesions and cankers on stems/branches/shoot, visible throughout the year.<br />
 			<div>
+				<!-- 2 -->
+				<img src="images/chalara_11.jpg" style="max-width:100%" alt="" border="0" />
+				<br />
+				<!-- 3 -->
+				<img src="images/chalara_13.jpg" style="max-width:100%" alt="" border="0" />
+			</div>		
+		</p>
+		
+		<p>Dieback of leaves with brown/black leaf stalks, most easily seen throughout summer.<br />
+			<div>
+				<!-- 8 -->
 				<img src="images/chalara_10.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>Dead or dying leaflets extending into leaflet vein (b) and stem (c).<br />
-			<div>
+				<br />
+				<!-- 9 -->
 				<img src="images/chalara_8.jpg" style="max-width:100%" alt="" border="0" />
-			</div>		
-		</p>
-		<p>Between July to October, tiny fruiting bodies of Hymenoscyphus can be 
-		found on blackened rachises (leaf stalks) of ash in damp leaves beneath 
-		trees. These do not necessarily belong to the Chalara but can be tested to 
-		determine their identity.<br />
+			</div>
+		</p>		
+
+		<p>Fruiting bodies on fallen blacked leaf stalks, visible June to October.<br />
 			<div>
+				<!-- 10 -->
 				<img src="images/chalara_7.jpg" style="max-width:100%" alt="" border="0" />
 			</div>		
 		</p>
+		
+		<p>Staining of wood under bark lesions, visible throughout the year.<br />
+			<div>
+				<!-- 4 -->
+				<img src="images/chalara_16.jpg" style="max-width:100%" alt="" border="0" />
+			</div>				
+		</p>
+		
 		<p>	
 		Visit our website for more information: <a href='http://www.forestry.gov.uk/chalara' target="_blank">www.forestry.gov.uk/chalara</a>
 		</p>
 		<p>
-		Text prepared by Forestry Commission. Photos 3, 8, 9, 10, 11, 15 & 16 courtesy and copyright of Thomas Kirisits; Photos 6 & 7 courtesy and copyright of Lea Vig McKinney; Photos 1, 4 & 5 courtesy and copyright of Iben Margrete Thomsen.
+		Photos courtesy Thomas Kirisits, Lea Vig McKinney and Iben Margrete Thomsen.
 		</p>
 		<a href="./index.html#sighting" data-role="button" data-icon="star">Report a Sighting</a>
 		
